[#12651] Gadget Ticket show page fix. Squashed commit of the following:
commit fa7d489fa84b3c61a89f380a22f9d26790e79959
Author: Bala <bala@freshdesk.com>
Date:   Thu Nov 19 16:01:20 2015 +0530

    correcting tab width.

commit 195ca919eba9eedb727f4d17200256059ad7b2ad
Author: Bala <bala@freshdesk.com>
Date:   Thu Nov 19 15:55:01 2015 +0530

    Gadget show ticket page css alignment fix.

commit a1b2682b789b382b1325ba9fdbe3aaa2c4246b07
Author: Bala <bala@freshdesk.com>
Date:   Thu Nov 19 15:47:26 2015 +0530

    Revert "skipping select shard for worker throttler"

    This reverts commit a008be14d1e8ca8b2adde4e02e6ff378c09b962a.

commit a008be14d1e8ca8b2adde4e02e6ff378c09b962a
Author: Murugan <murugu2012@gmail.com>
Date:   Thu Nov 19 14:16:25 2015 +0530

    skipping select shard for worker throttler

commit 6a0db2415d349b1c64950ac73c4ad6a7eb0fee9e
Author: Bala <bala@freshdesk.com>
Date:   Tue Nov 17 16:48:40 2015 +0530

    Delegate delete event click action namespace missing.

commit 21350e09dbea629870506cfddcbed971dd15e5ca
Author: Bala <bala@freshdesk.com>
Date:   Mon Nov 16 16:04:07 2015 +0530

    Gadget avatar, create ticket, show ticket fixes.

commit 34fdd0df0e6ccc1f93feabfecf7b1d5329dc8257
Author: Bala <bala@freshdesk.com>
Date:   Mon Nov 16 12:27:00 2015 +0530

    Gadget delete event fix. [#12944]

--- a/public/src/page/gadget.scss
+++ b/public/src/page/gadget.scss
@@ -136,6 +136,15 @@ body#gcgadget {
 			width : 100%;
 		}
 	}
+
+	.new_helpdesk_ticket {
+		.field {
+			select {
+				width: 99%;
+			}
+		}
+	}
+
 }
 
 body.minimized {
